# preAlps

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CPLM_Migration.txt  INSTALL.txt  LICENSE  Makefile  README.md  git_rules.README  make.inc  make.lib.inc  memo.txt
MAKES/: make.lib.inc  make.lib.inc-ecg  make.sourcedir  make.sourcedir-ecg
doc/: Doxyfile
examples/: Makefile  ecg_bench_petsc_pcg.c  ecg_petsc_op.c  ecg_prealps_op.c  test_bcgsolve.c  test_bench_bjacobi.c  test_bench_spmm.c  test_cgsolve.c  test_ecg_bench_fused.c  test_ecg_bench_fused_petsc_pcg.c  test_ecg_bench_petsc_pcg.c  test_ecg_petsc_ela.c  test_ecg_petsc_op.c  test_ecg_prealps_op.c  test_ecgsolve.c  test_lorasc.c  test_presc.bak.c  test_presc.c
include/: spTP_utils.h  tournamentPivoting.h
matrix/: ela100.perm.txt  ela100.rowPos.txt  ela12.perm.txt  ela12.rowPos.txt
src/: Makefile  preAlps_matrix.c  preAlps_matrix_mp.c  spMSV.c  tournamentPivoting.c  tournamentPivotingCUR.c  tournamentPivotingQR.c
src/preconditioners/: block_jacobi.c  block_jacobi.h  lorasc.c  lorasc.h  lorasc_eigsolve.c  lorasc_eigsolve.h  preAlps_preconditioner.c  preAlps_preconditioner.h  preAlps_preconditioner_struct.h  precond.c  precond.h  preconditioner.h  presc.c  presc.h  presc_eigsolve.c  presc_eigsolve.h  presc_eigsolve.rollback.c
src/solvers/: bcg.c  bcg.h  cg.h  ecg.c  ecg.h
test/: test_prototypeCUR.c  test_prototypeQR.c  test_prototypeTP.c  test_spMSV.c
testing/: superlu.c
utils/: Makefile  a_ortho.c  a_ortho.h  bcg.h  block_jacobi.c  block_jacobi.h  cg.c  cholqr.c  cholqr.h  eigsolver.c  eigsolver.h  matrixVectorOp.c  matrixVectorOp.h  mkl_pardiso_solver.c  mkl_pardiso_solver.h  mumps_solver.c  mumps_solver.h  operator.c  operator.h  parbcg_getline.c  parbcg_getline.h  parbcg_macro.h  pardiso_solver.c  pardiso_solver.h  preAlps_cplm_QS.c  preAlps_cplm_dvector.c  preAlps_cplm_dvector.h  preAlps_cplm_ijval.c  preAlps_cplm_ijval.h  preAlps_cplm_ivector.c  preAlps_cplm_ivector.h  preAlps_cplm_kernels.c  preAlps_cplm_kernels.h  preAlps_cplm_matcsr.c  preAlps_cplm_matcsr.h  preAlps_cplm_matdense.c  preAlps_cplm_matdense.h  preAlps_cplm_metis_utils.c  preAlps_cplm_metis_utils.h  preAlps_cplm_petsc_interface.c  (+26 more)
utils/cplm_core/: Makefile  cplm_QS.h  cplm_ijval.c  cplm_matcsr_core.c  cplm_matcsr_core.h  cplm_matcsr_struct.h  cplm_timing.h  cplm_utils.c  cplm_utils.h
utils/cplm_light/: Makefile  README  cplm_QS.c  cplm_darray.c  cplm_darray.h  cplm_iarray.c  cplm_iarray.h  cplm_kernels.c  cplm_kernels.h  cplm_matcsr.c  cplm_matcsr.h  cplm_matdense.c  cplm_matdense.h  cplm_utils.h
utils/cplm_v0/: Makefile  README  cplm_v0_dvector.c  cplm_v0_dvector.h  cplm_v0_ivector.c  cplm_v0_ivector.h  cplm_v0_kernels.c  cplm_v0_kernels.h  cplm_v0_matcsr.c  cplm_v0_matcsr.h  cplm_v0_matdense.c  cplm_v0_matdense.h  cplm_v0_matmult_v2.c  cplm_v0_matmult_v2.h  cplm_v0_metis_utils.c  cplm_v0_metis_utils.h  cplm_v0_timing.h  cplm_v0_utils.c  cplm_v0_utils.h
utils/iterativeKernels/: Makefile  README.md  make.inc
utils/iterativeKernels/include/: preAlps_matrix.h  preAlps_matrix_mp.h  spMSV.h  tournamentPivoting.h
utils/iterativeKernels/lib/: NOTE
utils/iterativeKernels/src/: Makefile  preAlps_matrix.c  tournamentPivotingCUR.c  tournamentPivotingQR.c
utils/iterativeKernels/test/: Makefile  test_prototypeCUR.c  test_prototypeQR.c  test_prototypeTP.c  test_spMSV.c
utils/iterativeKernels/utils/: Makefile  mmio.c  s_utils.c  s_utils.h
